--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ select {
   padding-bottom: 2px;
 }
 
+.select-container {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 svg circle:hover {
   cursor: crosshair;
 }
